Fix chatroom align title

--- a/client/src/components/Chatroom.scss
+++ b/client/src/components/Chatroom.scss
@@ -11,7 +11,7 @@
         top: 0;
         display: flex;
         flex-direction: column;
-        padding: .5rem .25rem;
+        padding: .8rem .25rem;
         align-items: flex-start;
         background-color: var(--grey);
         min-height: 49px;
